--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     )
     implementation 'com.codeborne:selenide:6.7.4'
 
+    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+
 }
 
 test {
